# trackmate-object-detection

./: .gitignore  Dockerfile  app_factory.py  config.py  logging.conf  main.py  pyproject.toml
.github/workflows/: main_trackmate-object-detection.yml
controllers/: health_controller.py  object_detection_controller.py
helpers/: logger.py
services/: object_detection_service.py
tests/: test_object_detection_service.py
