[tool.poetry]
name = "trackmate-object-detection"
version = "0.1.0"
description = ""
authors = ["Oliver Hofmann"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"
ultralytics = "^8.2.81"
python-multipart = "^0.0.9"
onnx = "^1.16.2"
onnxruntime = "^1.19.0"
onnxslim = "^0.1.32"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
